# librium/api/language.py
@@ -1,9 +1,9 @@
-from librium.database import Publisher
+from librium.database import Language
 from .util import get_all, add_one
 
 
 def create(**kwargs):
-    add_one(Publisher, **kwargs)
+    add_one(Language, **kwargs)
 
 
 def read(**kwargs):
